Forgot to commit HTML

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <a class="links" href="https://0736odub2jv1ra6tfdv1v5f630l3siemf3d9qdo2r8sbhicohoh0.codecademy.cloud/#">Download Excursion (Coming Soon!)</a>
+    <p><a id="toplink" class="links" href="https://0736odub2jv1ra6tfdv1v5f630l3siemf3d9qdo2r8sbhicohoh0.codecademy.cloud/#">Download Excursion (Coming soon!)</a></p>
+    <video autoplay muted loop src="./resources/videos/excursion.mp4">Video not supported</video>
+    <h2>Your personal travel guide</h1>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p><img src="./resources/images/camp.jpg" alt=""></p>
+    <p><img src="./resources/images/phone.png" alt=""></p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p><a class="links" href="#toplink">Download Excursion (Coming soon!)</a></p>
+    
   </body>
 </html>
