--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <p><img src="./resources/images/phone.png" alt=""></p>
     <h2>Coming Soon for iPhone and Android</h2>
     <p><a class="links" href="#toplink">Download Excursion (Coming soon!)</a></p>
-    
+    <p id="footer">© Excursion</p>
   </body>
 </html>
